tests/rustdoc-ui/invalid-html-self-closing-tag.stderr
error: invalid self-closing HTML tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:3:5
   |
LL | /// <p/>
   |     ^^
   |
note: the lint level is defined here
  --> $DIR/invalid-html-self-closing-tag.rs:1:9
   |
LL | #![deny(rustdoc::invalid_html_tags)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid self-closing HTML tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:7:5
   |
LL | /// <p style/>
   |     ^^

error: invalid self-closing HTML tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:11:5
   |
LL | /// <p style=""/>
   |     ^^

error: invalid self-closing HTML tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:15:5
   |
LL | /// <p style="x"/>
   |     ^^

error: unclosed quoted HTML attribute on tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:19:14
   |
LL | /// <p style="x/></p>
   |              ^

error: unclosed quoted HTML attribute on tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:23:14
   |
LL | /// <p style='x/></p>
   |              ^

error: invalid self-closing HTML tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:30:5
   |
LL | /// <p style="x/"/>
   |     ^^

error: invalid self-closing HTML tag `p`
  --> $DIR/invalid-html-self-closing-tag.rs:34:5
   |
LL | /// <p / >
   |     ^^

error: invalid self-closing HTML tag `a`
  --> $DIR/invalid-html-self-closing-tag.rs:47:5
   |
LL | /// <a href="/"/>
   |     ^^

error: invalid self-closing HTML tag `a`
  --> $DIR/invalid-html-self-closing-tag.rs:51:5
   |
LL | /// <a href=x />
   |     ^^

error: invalid self-closing HTML tag `a`
  --> $DIR/invalid-html-self-closing-tag.rs:55:5
   |
LL | /// <a href= />
   |     ^^

error: unclosed HTML tag `rect`
  --> $DIR/invalid-html-self-closing-tag.rs:65:10
   |
LL | /// <svg><rect width=1 height=/></svg>
   |          ^^^^^

error: aborting due to 12 previous errors

